--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <ul class="social-links">
                     <li>
                         <a href="#" title="Siga-nos no Instagram">
-                            <img src="./Imagens/instagram.png" alt="Logo do instagram"/>
+                            <img src="./imagens/instagram.png" alt="Logo do instagram"/>
                         </a>
                     </li>
                     <li>
@@ -85,7 +85,7 @@
                     </li>
                     <li>
                         <a href="#" title="Visite nosso canal no Youtube">
-                            <img src="./Imagens/youtube.png" alt="Logo do Youtube"/>
+                            <img src="./imagens/youtube.png" alt="Logo do Youtube"/>
                         </a>
                     </li>
                 </ul>
