--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </li>
                     <li>
                         <a href="#" title="Siga-nos no Facebook">
-                            <img src="./Imagens/facebook.png" alt="Logo do Facebook"/>
+                            <img src="./imagens/facebook.png" alt="Logo do Facebook"/>
                         </a>
                     </li>
                     <li>
